# nautobot-docker-compose

./: .gitignore  .gitlab-ci.yml  Makefile  deploy_shms_upstream_node1.sh  deploy_shms_vpn_control_api.sh  pyproject.toml  tasks.py
.github/workflows/: ci.yml
config/: nautobot_config.py
docs/: SHMS_APP_VERSIONING.md  SHMS_AS_BUILT_REFERENCE.md  SHMS_DEPLOYMENT.md  SHMS_RBAC_AD_SPEC.md  SHMS_VPN_HA_DESIGN.md  SHMS_VPN_MULTI_TENANT_CONTROL_PLANE.md  shms-image-governance.md
environments/: Dockerfile  celery-vpn-wrapper.sh  creds.example.env  creds.shms.example.env  docker-compose.shms-app.yml  docker-compose.shms-vpn.control.yml  docker-compose.shms-vpn.host-worker.yml  docker-compose.shms-vpn.queue.yml  docker-compose.shms-vpn.service.yml  local.example.env  local.shms.example.env
jobs/: __init__.py  day7_validation.py  vpn_queue_reconciliation.py
patches/: jinja_filters.py
patches/nautobot_ui_plugin/: template_content.py
patches_runtime/: device_multi_tenant_fix.py  dynamic_jobs_app_config_fix.py  interface_multi_tenant_fix.py  ldap_superuser_staff_fix.py  meraki_ssot_adapter_fix.py  nautobot_startup_hook.py  software_version_device_lookup_fix.py  vault_secret_provider_registry_fix.py  vlan_filtering_fix.py  welcome_wizard_import_filename_uniqueness_fix.py
plugins/nautobot-app-nautobot-connectivity-matrix/: .cookiecutter.json  .gitignore  LICENSE  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
plugins/nautobot-app-nautobot_software_lifecycle/: .cookiecutter.json  .gitignore  LICENSE  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
plugins/nautobot-app-nbcot/: .cookiecutter.json  .gitignore  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
plugins/nautobot-app-vpn-manager/: pyproject.toml
plugins/nautobot-app-vpn-manager/nautobot_vpn_manager/: __init__.py  forms.py  navigation.py  piconfig_client.py  urls.py  views.py  worker_inventory.py
plugins/nautobot-app-vpn-manager/nautobot_vpn_manager/templates/nautobot_vpn_manager/: dashboard.html  worker_detail.html  workers.html
plugins/nautobot-app-vpn-manager/tests/: test_piconfig_client.py  test_worker_inventory.py  test_worker_templates.py
plugins/shms-secret-resolver/: pyproject.toml
plugins/shms-secret-resolver/shms_secret_resolver/: __init__.py  resolver.py
scripts/: bootstrap_shms_git_repositories.py  bootstrap_shms_rbac.py  create_shms_ad_rbac_examples.ps1  create_shms_ad_rbac_groups.ps1
tests/: test_device_coverage_list_export_ui.py  test_device_effective_eox_content.py  test_nbcot_secret_resolution.py  test_shms_secret_resolver.py
vpn/: cisco_secure_client_host.sh  vpn.sh
vpn/vpn/: Dockerfile  (+5 more)
(+189 files in other folders)
