[tool.poetry]
name = "nautobot-docker-compose"
version = "0.2.0"
description = "Docker Compose files used to build Nautobot containers"
authors = ["Network to Code, LLC <info@networktocode.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nautobot = "3.1.0"

manuf = "^1.1.5"
nautobot-welcome-wizard = "^3.0.0"
nautobot-device-onboarding = "^5.0.0"
nautobot-ssot = {extras = ["vsphere"], version = "^4.0.0"}
nornir-nautobot = "^4.0.0"
pynautobot = "^3.0.0"
nautobot-device-lifecycle-mgmt = "^4.0.0"
nautobot-secrets-providers = {extras = ["hashicorp"], version = "^4.0.0"}
nautobot-capacity-metrics = "^4.1.0"
nautobot-golden-config = "^3.0.0"
nautobot-software-lifecycle = {path = "plugins/nautobot-app-nautobot_software_lifecycle"}
nautobot-ui-plugin = "^1.0.0"
nautobot-connectivity-matrix = {path = "plugins/nautobot-app-nautobot-connectivity-matrix"}
nbcot = {path = "plugins/nautobot-app-nbcot"}
nautobot-vpn-manager = {path = "plugins/nautobot-app-vpn-manager"}
nautobot-plugin-nornir = "^3.0.0"
ipaddr = "^2.2.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
xlsxwriter = "^3.2.2"
n2g = "^0.3.3"
networkx = "^3.4.2"
python-igraph = "^0.11.8"
py7zr = "^0.22.0"
ncclient = "0.6.19"
netaddr = "^1.3.0"
ns-helper-functions = "^0.0.8"
ns-nornir-table-inventory = "^0.0.1"
azure-identity = "^1.25.1"
azure-mgmt-compute = "^37.0.1"
azure-mgmt-resource = "^24.0.0"
azure-mgmt-network = "^29.0.0"
boto3 = ">=1.26.143,<2.0.0"
django-auth-ldap = "^5.2.0"

# nautobot-example-plugin = {path = "plugins/plugin_example", develop = true}

[tool.poetry.group.dev.dependencies]
invoke = "*"
toml = "*"
pillow = "^12.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
