[tool.poetry]
name = "shms-secret-resolver"
version = "0.1.0"
description = "Shared SHMS environment and Vault secret resolver"
authors = ["SHMS"]
packages = [
    { include = "shms_secret_resolver" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
requests = ">=2.31,<3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
